fix: Потренируем StreamAPI 2