@@ -1,43 +1,45 @@
 package school.faang.streamapi2;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 public class ListOperations {
-    public static List<int[]> findUniquePairs(Set<Integer> numbers, int target) {
+    public static Set<List<Integer>> findPairs(Set<Integer> numbers, int sum) {
         return numbers.stream()
-                .flatMap(a -> numbers.stream()
-                        .filter(b -> a + b == target && a < b)
-                        .map(b -> new int[]{a, b}))
-                .collect(Collectors.toList());
+                .filter(num -> num != sum - num && numbers.contains(sum - num))
+                .map(num -> Arrays.asList(num, sum - num))
+                .peek(Collections::sort)
+                .collect(Collectors.toSet());
     }
 
     public static List<String> getSortedCapitals(Map<String, String> countryCapitals) {
         return countryCapitals.entrySet().stream()
                 .sorted(Map.Entry.comparingByKey())
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> filterAndSort(List<String> strings, char startChar) {
         return strings.stream()
                 .filter(s -> s.startsWith(String.valueOf(startChar)))
                 .sorted((s1, s2) -> Integer.compare(s1.length(), s2.length()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> convertToBinary(List<Integer> numbers) {
         return numbers.stream()
                 .map(Integer::toBinaryString)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> filterAndSortByAlphabet(List<String> strings, String alphabet) {
         return strings.stream()
                 .filter(s -> s.chars().allMatch(c -> alphabet.indexOf(c) >= 0))
                 .sorted((s1, s2) -> Integer.compare(s1.length(), s2.length()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
